# Stage_Ram_PFA_Data_Visualisation

./: .dockerignore  .env.example  .gitignore  LICENCE  README.md  build.ps1  build_App.ps1  build_desktop.ps1  build_docker.ps1  bundler.iss.example  config.py  config.toml  dashboard_config.json  diagramme_etat_transition.txt  docker-compose.yml  dockerfile  main.py  main.spec  package-lock.json  pyproject.toml  rapport_detaille_projet.txt  requirements.txt  run_server.unix.ps1  run_server.windows.ps1  start_docker.ps1  temp_chart.txt  temp_chart_fix.txt  temp_stats.txt
dashboard/: Book1.xlsx  RAM Delay Dashboard.py  README.md  app.py  config.py  config.toml  excel_manager.py  exel_manager.py  filter_state.py  main.ipynb  main.py  main2.ipynb  myconfig.py  root.py  root1.py  server_instance.py  state.py  test.db  test.py  utils.py
dashboard/assets/: hover.css  ram.css
dashboard/calculations/: analytics.py  main_dashboard.py  performance_metrics.py  weekly.py
dashboard/components/: auth.py  filter.py  navbar.py  title.py  trigger_page_change.py
dashboard/configurations/: config.py  config.toml  log_config.py  nav_config.py
dashboard/data_managers/: auth_db_manager.py  cache_manager.py  database_manager.py  db.py  excel_manager.py  session_manager.py  watcher_excel_dir.py
dashboard/data_managers/unitializers/: database_seed.py
dashboard/mappers/: user_mapper.py
dashboard/pages/Components/: components.py
dashboard/pages/about/: metadata.py  page.py
dashboard/pages/admin/: metadata.py  page.py
dashboard/pages/analytics/: metadata.py  page.py
dashboard/pages/config/: data_config.py
dashboard/pages/home/: main.py  metadata.py  page.py
dashboard/pages/login/: metadata.py  page.py
dashboard/pages/performance_metrics/: metadata.py  page.py
dashboard/pages/settings/: metadata.py  page.py
dashboard/pages/tech/: delay_codes.py  main.py  metadata.py  page.py  self_app_3.py
dashboard/pages/temporal/: page.py
dashboard/pages/undefined/: metadata.py  page.py
dashboard/pages/verify/: metadata.py  page.py
dashboard/pages/weekly/: metadata.py  page.py  page.py.backup
dashboard/schemas/: auth.py  data_status.py  database_models.py  filter.py  navbarItem.py
dashboard/services/: options_service.py  page_service.py  role_service.py  session_service.py  user_service.py
dashboard/status/: data_status_manager.py  user_status_manager.py
dashboard/utils_dashboard/: auth_utils.py  graph_utils.py  utils_auth.py  utils_authentication.py  utils_authorization.py  utils_download.py  utils_filter.py  utils_graph.py  utils_navs.py  utils_page.py  utils_preference.py
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
