[project]
name = "dashboard"
version = "0.1.0"
description = ""
authors = [{ name = "Taj Eddine Marmoul", email = "tajdinetajdine1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dash (>=3.2,<4.0)",
    "polars (>=1.31.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "dash-bootstrap-components (>=2.0.3,<3.0.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "fastexcel (>=0.14.0,<0.15.0)",
    "xlsxwriter (>=3.2.5,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyinstaller (>=6.15.0,<7.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "dash-table (>=5.0.0,<6.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "kaleido (>=1.0.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "cefpython3 (>=66.1,<67.0)",
    "pywebview (>=6.0,<7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.prod.dependencies]
gunicorn = "^23"

[tool.poetry.scripts]
start-prod = "gunicorn.app.wsgiapp:run"
